--- a/prehtml/portal.htm
+++ b/prehtml/portal.htm
@@ -10,7 +10,9 @@
   <title>Tonc: Entrance</title>
   <link rel="stylesheet" type="text/css" href="tonc.css">
 </head>
-<body>
+<body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -111,5 +113,6 @@
   <td class="hdr_r">Projects
 </table>
 
+</div> <!-- main-container -->
 </body>
 </html>
