--- a/prehtml/affbg.htm
+++ b/prehtml/affbg.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -134,11 +136,11 @@ You can find their addresses in table <em>[[ref:tbl-aff-regs]]</em>.
 </caption>
 <col span=2 align="right">
   <tr><th>Register      <th>length  <th>address
-  <tr><th>REG_BGxCNT    <td>2       <td>0400:0008h + 2·x
+  <tr><th>REG_BGxCNT    <td>2       <td>0400:0008h + 2ï¿½x
 
-  <tr><th>REG_BGxPA-PD  <td>2       <td>0400:0020h + 10h·(x-2)
-  <tr><th>REG_BGxX      <td>4       <td>0400:0028h + 10h·(x-2)
-  <tr><th>REG_BGxY      <td>4       <td>0400:002ch + 10h·(x-2)
+  <tr><th>REG_BGxPA-PD  <td>2       <td>0400:0020h + 10hï¿½(x-2)
+  <tr><th>REG_BGxX      <td>4       <td>0400:0028h + 10hï¿½(x-2)
+  <tr><th>REG_BGxY      <td>4       <td>0400:002ch + 10hï¿½(x-2)
 </table>
 </div>
 
@@ -454,7 +456,7 @@ lot easier.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-aff-sid]]</em>)
   <td class="eqcell">
-    <i>n</i> = <i>tx</i> + <i>ty</i>·<i>tw</i>
+    <i>n</i> = <i>tx</i> + <i>ty</i>ï¿½<i>tw</i>
 </table>
 
 <p>
@@ -520,7 +522,7 @@ the map anchor to a specific location on the screen, you need an anchor
 there as well. This is <b>q</b><sub>0</sub>. Fill both into 
 eq&nbsp;<em>[[ref:eq-aff-ofs]]</em> to find the displacement vector you 
 need: 
-<b>dx</b>&nbsp;=&nbsp;<b>p</b><sub>0</sub>&minus;<b>P·q</b><sub>0</sub>.
+<b>dx</b>&nbsp;=&nbsp;<b>p</b><sub>0</sub>&minus;<b>Pï¿½q</b><sub>0</sub>.
 This <b>dx</b> is going to be quite different from both 
 <b>p</b><sub>0</sub> and <b>q</b><sub>0</sub>. Its path is 
 indicated by the black crosshairs.
@@ -756,6 +758,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
