--- a/prehtml/affobj.htm
+++ b/prehtml/affobj.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -197,7 +199,7 @@ paint the screen pixels in that area (<b>q</b>) uses texture-pixel
   <td class="eqnrcell">(<em>[[ref:eq-aff-ofs]]</em>)
   <td class="eqcell">
     <b>p &minus; p</b><sub>0</sub> =
-	<b>P</b> · (<b>q &minus; q</b><sub>0</sub>),
+	<b>P</b> ï¿½ (<b>q &minus; q</b><sub>0</sub>),
 </table>
 <p>
 where <b>p</b><sub>0</sub> and <b>q</b><sub>0</sub> are the centers
@@ -746,7 +748,7 @@ state will be performed, via matrix multiplication.
   <td class="fill">&nbsp;
   <td class="eqcell">
     <b>P</b><sub>new</sub> =
-    <b>P</b><sub>old</sub> · <b>D</b><sup>&minus;1</sup>,
+    <b>P</b><sub>old</sub> ï¿½ <b>D</b><sup>&minus;1</sup>,
 </table>
 
 <p>
@@ -762,7 +764,7 @@ all these transformations have the convenient property that
 <tr>
   <td class="fill">&nbsp;
   <td class="eqcell">
-    <b>D</b>(a)·<b>D</b>(b) = <b>D</b>(c).
+    <b>D</b>(a)ï¿½<b>D</b>(b) = <b>D</b>(c).
 </table>
 
 <p>
@@ -837,7 +839,7 @@ the table below.
 <tr>
   <td> <b>r</b><sub>p</sub>, <b>r</b><sub>q</sub> </td>
   <td> Distances between object centers and anchors. By definition, 
-	<b>r</b><sub>p</sub> = <b>P</b>·<b>r</b><sub>q</sub></td>
+	<b>r</b><sub>p</sub> = <b>P</b>ï¿½<b>r</b><sub>q</sub></td>
 </tr>
 <tr>
   <td> <b>x</b> </td>	<td>Desired object coordinates.</td>
@@ -879,7 +881,7 @@ equations.
   <tr>
     <td> <b>r</b><sub>p</sub> </td>
     <td> = </td>
-    <td> <b>P</b>·<b>r</b><sub>q</sub> </td>
+    <td> <b>P</b>ï¿½<b>r</b><sub>q</sub> </td>
   </tr>
   </table>
   </td>
@@ -906,7 +908,7 @@ in the most usable form.
     <td> <b>x</b>
     <td>=
     <td> <b>q</b><sub>0</sub> &minus; <i>m</i><b>s</b> &minus; 
-	  <b>P</b><sup>&minus;1</sup>·
+	  <b>P</b><sup>&minus;1</sup>ï¿½
 	  (<b>p</b><sub>0</sub> &minus; &frac12;<b>s</b>)
   </tbody>
   </table>
@@ -1452,6 +1454,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
