--- a/prehtml/bitmaps.htm
+++ b/prehtml/bitmaps.htm
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -32,11 +33,11 @@
 
 <!-- [[toc]] -->
 <ul>
-  <li><a href="#sec-intro">Introduction</a>.
+  <li><a href="#sec-intro">Introduction</a>
   <li><a href="#sec-modes">GBA bitmap modes, for real</a>
-  <li><a href="#sec-page">Page flipping</a>.
-  <li><a href="#sec-data">On data and how to use it</a>.
-  <li><a href="ssec-conc">Conclusions</a>.
+  <li><a href="#sec-page">Page flipping</a>
+  <li><a href="#sec-data">On data and how to use it</a>
+  <li><a href="ssec-conc">Conclusions</a>
 </ul>
 <!-- [[/toc]] -->
 
@@ -2325,26 +2326,28 @@ class="num">5</span>)
 }
 </pre>
 
-<div class="lblock">
+<div class="cblock">
 <table id="img-bm-modes">
 <tr>
-<td>
-  <div class="cpt" style="width:240px">
-  <img src="../img/demo/bm_modes_3.png" alt="mode3 screen">
-  <b>Fig <em>[[ref:img-bm-modes]]</em>a</b>: <tt>bm_modes</tt> in mode 3.
-  </div>
-<td>
-  <div class="cpt" style="width:240px">
-  <img src="../img/demo/bm_modes_4.png" alt="mode4 screen">
-  <b>Fig <em>[[ref:img-bm-modes]]</em>b</b>: <tt>bm_modes</tt> in mode 4.
-  </div>
-<tr>
-<td>
-  <div class="cpt" style="width:240px">
-<img src="../img/demo/bm_modes_5.png" alt="mode5 screen">
-  <b>Fig <em>[[ref:img-bm-modes]]</em>c</b>: <tt>bm_modes</tt> in mode 5.
-  </div>
-<td>&nbsp;
+  <td>
+    <div class="cpt" style="width:240px">
+    <img src="../img/demo/bm_modes_3.png" alt="mode3 screen">
+    <b>Fig <em>[[ref:img-bm-modes]]</em>a</b>: <tt>bm_modes</tt> in mode 3.
+    </div>
+  </td>
+  <td>
+    <div class="cpt" style="width:240px">
+    <img src="../img/demo/bm_modes_4.png" alt="mode4 screen">
+    <b>Fig <em>[[ref:img-bm-modes]]</em>b</b>: <tt>bm_modes</tt> in mode 4.
+    </div>
+  </td>
+  <td>
+    <div class="cpt" style="width:240px">
+    <img src="../img/demo/bm_modes_5.png" alt="mode5 screen">
+    <b>Fig <em>[[ref:img-bm-modes]]</em>c</b>: <tt>bm_modes</tt> in mode 5.
+    </div>
+  </td>
+</tr>
 </table>
 </div>
 
@@ -2386,7 +2389,6 @@ longer with that; or at least until we've covered basic input, which
 allows for much more interesting things than just passive images.
 </p>
 
-
 <br>
 
 <div class="endtag">
@@ -2413,6 +2415,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
