--- a/prehtml/dma.htm
+++ b/prehtml/dma.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -89,11 +91,11 @@ offset of 12 (see table&nbsp;1).
 </caption>
 <tr><th>reg<th>function<th>address
 <tr><td><code>REG_DMAxSAD</code><td>source
-	<td><code>0400:00B0h  + 0Ch</code>·x
+	<td><code>0400:00B0h  + 0Ch</code>ï¿½x
 <tr><td><code>REG_DMAxDAD</code><td>destination
-	<td><code>0400:00B4h + 0Ch</code>·x
+	<td><code>0400:00B4h + 0Ch</code>ï¿½x
 <tr><td><code>REG_DMAxCNT</code><td>control
-	<td><code>0400:00B8h + 0Ch</code>·x
+	<td><code>0400:00B8h + 0Ch</code>ï¿½x
 </table>
 </div>
 
@@ -814,6 +816,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
