--- a/prehtml/edmake.htm
+++ b/prehtml/edmake.htm
@@ -10,7 +10,8 @@
   <title>Tonc: make via editors</title>
   <link rel="stylesheet" type="text/css" href="tonc.css">
 </head>
-<body>
+<body onload="main();">
+<div class="main-container">
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -526,5 +527,6 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
