--- a/prehtml/gfx.htm
+++ b/prehtml/gfx.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
 <!-- [[header]] -->
@@ -339,7 +341,7 @@ of the a pixel in this region is defined as
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-blend]]</em>)
   <td class="eqcell">
-    C = w<sub>A</sub>·A + w<sub>B</sub>·B,
+    C = w<sub>A</sub>ï¿½A + w<sub>B</sub>ï¿½B,
 </table>
 
 <p>
@@ -1390,6 +1392,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
