--- a/prehtml/lab.htm
+++ b/prehtml/lab.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -425,12 +427,12 @@ the <i>y</i>-axis can be described by the following relation:
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
-    <td><i>A</i>·cos(<i>k</i>·<i>y</i>+&omega;<i>t</i>)
+    <td><i>A</i>ï¿½cos(<i>k</i>ï¿½<i>y</i>+&omega;<i>t</i>)
     <td class="bdrRR" rowspan=3>&nbsp;
   <tr>
     <td> <i>y</i>
   <tr>
-    <td><i>A</i>sin(<i>k</i>·<i>y</i>+&omega;<i>t</i>)
+    <td><i>A</i>sin(<i>k</i>ï¿½<i>y</i>+&omega;<i>t</i>)
   </tbody>
   </table>
 </table>
@@ -927,6 +929,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
