--- a/prehtml/log.htm
+++ b/prehtml/log.htm
@@ -9,7 +9,9 @@
   <title>Tonc: Log</title>
   <link rel="stylesheet" type="text/css" href="tonc.css">
 </head>
-<body>
+<body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -1000,5 +1002,6 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
