--- a/prehtml/regbg.htm
+++ b/prehtml/regbg.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -316,9 +318,9 @@ pairs. These start at <code>0400:0010</code>
 </caption>
 <col span=2 align="right">
   <tr><th>Register      <th>length  <th>address
-  <tr><th>REG_BGxCNT    <td>2       <td>0400:0008h + 2·<i>x</i>
-  <tr><th>REG_BGxHOFS   <td>2       <td>0400:0010h + 4·<i>x</i>
-  <tr><th>REG_BGxVOFS   <td>2       <td>0400:0012h + 4·<i>x</i>
+  <tr><th>REG_BGxCNT    <td>2       <td>0400:0008h + 2ï¿½<i>x</i>
+  <tr><th>REG_BGxHOFS   <td>2       <td>0400:0010h + 4ï¿½<i>x</i>
+  <tr><th>REG_BGxVOFS   <td>2       <td>0400:0012h + 4ï¿½<i>x</i>
 </table>
 </div>
 
@@ -659,7 +661,7 @@ the tilemap.
 <p>Now, suppose you have a tilemap that's <i>tw</i>&times;<i>th</i> 
 tiles/SEs in size. You might expect that the screen entry 
 at tile-coordinates (<i>tx</i>,&nbsp;<i>ty</i>) could be found 
-at SE-number <i>n</i>&nbsp;=&nbsp;<i>tx</i>+<i>ty</i>·<i>tw</i>, 
+at SE-number <i>n</i>&nbsp;=&nbsp;<i>tx</i>+<i>ty</i>ï¿½<i>tw</i>, 
 because that's how matrices always work, right? Well, you'd be wrong.
 At least, you'd be <i>partially</i> wrong.
 </p>
@@ -789,8 +791,8 @@ numbering went according to 4bit tiles (s-tiles); for 8bit tiles
 always multiples of 2 in memory). In tile-maps, however, d-tiles are 
 numbered by the d-tile. To put it in other words, for sprites, using
 index <i>id</i> indicates the same tile for both 4 and 8bit tiles, 
-namely the one that starts at <i>id</i>·20h. For tile-maps, however, 
-it starts at <i>id</i>·20h for 4bit tiles, but at <i>id</i>·40h for 
+namely the one that starts at <i>id</i>ï¿½20h. For tile-maps, however, 
+it starts at <i>id</i>ï¿½20h for 4bit tiles, but at <i>id</i>ï¿½40h for 
 8bit tiles.
 </p>
 
@@ -1846,6 +1848,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
