--- a/prehtml/swi.htm
+++ b/prehtml/swi.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -602,8 +604,8 @@ on the 240x160 screen. The definitions are
 <tr><td>division	<td><i>y</i>= 2560/<i>x</i>
 <tr><td>square root	<td><i>y</i>= 160*sqrt(<i>x</i>/240)
 <tr><td>arctan  	<td><i>y</i>= 80 + 64*(2/&pi;)*(arctan(<i>x</i>-120)/16))
-<tr><td>sine		<td><i>y</i>=  1*sy*sin(2&pi;·<i>x</i>/240)	<td>; sy= 80
-<tr><td>cosine		<td><i>y</i>= 80*sx*cos(2&pi;·<i>x</i>/240)	<td>; sx= 1
+<tr><td>sine		<td><i>y</i>=  1*sy*sin(2&pi;ï¿½<i>x</i>/240)	<td>; sy= 80
+<tr><td>cosine		<td><i>y</i>= 80*sx*cos(2&pi;ï¿½<i>x</i>/240)	<td>; sx= 1
 </table>
 <p>
 and these functions have been plotted in fig&nbsp;1. If you're wondering
@@ -899,6 +901,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
