--- a/prehtml/timers.htm
+++ b/prehtml/timers.htm
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="tonc.js"></script>
 </head>
 <body onload="main();">
+<div class="main-container">
+
 
 <!--567890123456789012345678901234567890123456789012345678901234567-->
 
@@ -126,9 +128,9 @@ found in table <em>[[ref:tbl-tmr-reg]]</em>.
 </caption>
 <tr><th>reg<th>function<th>address
 <tr><td><code>REG_TMxD</code><td>data
-	<td><code>0400:0100h  + 04h</code>·x
+	<td><code>0400:0100h  + 04h</code>ï¿½x
 <tr><td><code>REG_TMxCNT</code><td>control
-	<td><code>0400:0102h + 04h</code>·x
+	<td><code>0400:0102h + 04h</code>ï¿½x
 </table>
 </div>
 
@@ -391,6 +393,7 @@ Get all Tonc files <a href="http://www.coranac.com/projects/#tonc" target="_blan
 </table>
 <!-- [[/footer]] -->
 
+</div> <!-- main-container -->
 </body>
 </html>
 
