--- a/prehtml/numbers.htm
+++ b/prehtml/numbers.htm
@@ -1,14 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+  <meta charset="utf-8">
   <meta name="Author" content="Cearn">
   <meta name="Created" content="20041112">
   <meta name="Modified" content="20130324">
 
   <title>Tonc: Numbers, bits and bit-ops</title>
   <link rel="stylesheet" type="text/css" href="tonc.css">
-  <script type="text/javascript" src="tonc.js"></script>
+  <script src="tonc.js"></script>
 </head>
 <body onload="main();">
 <div class="main-container">
@@ -246,7 +246,7 @@ of course, we need the powers of two themselves. The first 11 are:
 <div class="lblock">
 <table id="tbl-pot"
   border=1 cellpadding=2 cellspacing=0>
-<caption align="bottom"><b>Table <em>[[ref:[tbl-pot]]</em></b>: powers of two</caption>
+<caption class="bottom"><b>Table <em>[[ref:[tbl-pot]]</em></b>: powers of two</caption>
 <col span=3 align="right">
 <tr align="center"><th>exponent<th>binary<th>decimal
 <tr><td> 0 <td>1			<td>1
@@ -828,7 +828,7 @@ complement</dfn>. The table below shows how this works for 3 digits.
 <div class="lblock">
 <table id="tbl-10cmpl"
   border=1 cellpadding=2 cellspacing=0>
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref:tbl-10cmpl]]</em></b>: tens' complement for 3 digits
 </caption>
 <tbody align="center">
@@ -1061,7 +1061,7 @@ yourself warned.
 <div class="cblock">
 <table id="tbl-ascii"
   border=1 cellpadding=2 cellspacing=0>
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref-tbl-ascii]]</em></b>: ASCII 0-127
 </caption>
 <tr><td>
@@ -1313,7 +1313,7 @@ transfer that to a computer with a different endian-scheme.
 <div class="lblock">
 <table id="tbl-endian"
   border=1 cellpadding=2 cellspacing=0 width=30%>
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref:tbl-endian]]</em></b>: storing 0x11223344
 </caption>
 <col span=5 align="center">
@@ -1447,7 +1447,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 
 <div class="lblock">
 <table id="tbl-bitops-truth">
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref:tbl-bitops-truth]]</em></b>: bit operations
 </caption>
   <tr valign="top"><td>
@@ -1482,7 +1482,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 
 <!-- frame for masked results -->
 <table id="tbl-bitops-eg">
-<caption>
+<caption class="top">
   <b>Table <em>[[ref:tbl-bitops-eg]]a</em></b>: bit-ops examples
 </caption>
   <col span=4 width=144>
@@ -1583,7 +1583,7 @@ operators like '|='.
 
 <!-- frame for masked results -->
 <table>
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref:tbl-bitops-eg]]</em>b</b>: bit-ops examples encore,
   using source <i>s</i>=35h and mask <i>m</i>=0Fh
 </caption>
@@ -1670,7 +1670,7 @@ variable, in pretty much the way you'd expect:
 <div class="lblock">
 <table id="tbl-shift"
   cellpadding=4 cellspacing=0 frame=void rules=groups>
-<caption align="bottom"><b>Table <em>[[ref:tbl-shift]]</em></b>: shift / rotate operations on
+<caption class="bottom"><b>Table <em>[[ref:tbl-shift]]</em></b>: shift / rotate operations on
   byte 35h (<code>00110101</code>)</caption>
 <colgroup>
 <colgroup>
@@ -1750,7 +1750,7 @@ you'd get by sign-bit extension or not.
 <div class="lblock">
 <table id="tbl-sign"
   border=1 cellspacing=0 cellpadding=2>
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref:tbl-sign]]</em></b>: signed and unsigned <code>80h&gt;&gt;3</code>
 </caption>
 <col span=3 align="center">
@@ -1834,7 +1834,7 @@ constant is a power of two.
 <div class="lblock">
 <table id="tbl-bitops-arith"
   cellpadding=4 cellspacing=0 frame=void rules=groups>
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref:tbl-bitops-arith]]</em></b> Arithmetic bit-ops summary
 </caption>
 <colgroup valign="bottom">
@@ -1880,7 +1880,7 @@ an 8bit computer, cool huh?
 <div class="lblock">
 <table id="tbl-adder"
   border=1 cellspacing=0 cellpadding=2 frame=void rules=groups width=10%>
-<caption align="bottom">
+<caption class="bottom">
   <b>Table <em>[[ref:tbl-adder]]</em></b>: 1-bit adder
 </caption>
 <colgroup align="center">
